- additional translations, update news and version number

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -1,93 +1,107 @@
 {
     "LanguageNotice.title": "Hallo!",
-    "LanguageNotice.text": "Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.",
-    "LanguageNotice.useEnglish": "Englisch verwenden",
+    "LanguageNotice.text": "Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, hoffen aber, bald noch weitere Sprachen unterstützen zu können.",
+    "LanguageNotice.useEnglish": "Stattdessen Englisch verwenden",
 
-    "Lcars.copyright": "STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.",
     "Lcars.credits": "Danksagungen",
     "Lcars.feedback": "Feedback",
     "Lcars.history": "Verlauf",
-    "Lcars.news": "News",
-    "Lcars.profile": "Profil",
+    "Lcars.news": "Neuigkeiten",
+    "Lcars.profile": "Bogen",
 
-    "EraSelectionPage.sourceInstruction": "Wählen Sie Quellen aus. Fragen Sie Ihren SL, welche verfügbar sind.",
-    "EraSelectionPage.sourceNote": "Einige Quellen sind noch nicht implementiert; schauen Sie bald wieder vorbei!",
-    "EraSelectionPage.eraInstruction": "Wählen Sie aus, in welcher Ära gespielt werden soll. Fragen Sie Ihren SL, welche Ära Sie wählen sollen.",
+    "EraSelectionPage.sourceInstruction": "Wählen Sie die verfügbaren Quellen aus. Fragen Sie, wenn nötig, Ihre Spielleitung, welche zur Verfügung stehen.",
+    "EraSelectionPage.sourceNote": "Einige Quellen sind noch nicht verfügbar - schauen Sie bald wieder vorbei!",
+    "EraSelectionPage.eraInstruction": "Wählen Sie aus, in welcher Ära gespielt wird. Fragen Sie, wenn nötig, Ihre Spielleitung, welche Ära Sie wählen sollen.",
 
     "Home.selection": "Werkzeug auswählen.",
     "Home.characterButton": "Charaktere & Raumschiffe",
     "Home.talentsButton": "Talente im Überblick",
 
     "ViewPage.viewSupportingCharacter": "Nebencharakter anzeigen",
-    "ViewPage.viewMainCharacter": "Hauptcharakter anzeigen",
+    "ViewPage.viewNpc": "NSC anzeigen",
+    "ViewPage.viewMainCharacter": "Hauptfigur anzeigen",
     "ViewPage.viewStarship": "Raumschiff ansehen",
-    "ViewPage.errorMessage": "Die Dinge sind schrecklich, schrecklich schief gelaufen. Wir könnten uns im Spiegeluniversum befinden.",
+    "ViewPage.errorMessage": "Etwas ist ganz schrecklich schief gelaufen. Wir könnten uns im Spiegeluniversum befinden.",
     "ViewPage.unnamedStarship": "Unbenanntes Raumschiff",
 
     "GMTracker.title": "NSC-Verwaltung",
-    "GMTracker.instruction": "Benutze dieses Tool, um verschiedene NSC in deinem Spiel zu verwalten.",
+    "GMTracker.instruction": "Benutzen Sie dieses Werkzeug, um die verschiedenen NSCs in Ihrem Spiel zu verwalten.",
     "GMTracker.addCharacterModalTitle": "Charakter hinzufügen",
 
-    "AddCharacterView.instruction": "Fügen Sie die URL für einen Charakter ein.",
+    "AddCharacterView.instruction": "Fügen Sie die URL eines Charakters ein.",
     "AddCharacterView.errorMessage": "Diese URL sieht nicht gültig aus.",
     "AddCharacterView.errorCharacterType": "Hoppla! Wir unterstützen im Moment nur Charaktere. Keine Raumschiffe.",
     "AddCharacterView.characterPrefix": "Charakter:",
 
+    "CharacterSheetDialog.title": "Vorlage auswählen",
+
     "CustomSpeciesDetails.speciesName": "Name",
-    "CustomSpeciesDetails.instruction": "Wie lautet der Name dieser Spezis?",
-    "CustomSpeciesDetails.speciesTrait": "Jede Spezies erhält ein bestimmtest Talent, das in bestimmten Situationen zusätzliche Vorteile verleihen kann.",
+    "CustomSpeciesDetails.instruction": "Wie lautet der Name dieser Spezies?",
+    "CustomSpeciesDetails.speciesTrait": "Jede Spezies erhält ein bestimmtes Merkmal, das in bestimmten Situationen zusätzliche Vorteile gewähren kann.",
     "CustomSpeciesDetails.speciesNameWarning": "Bitte einen Namen für diese Spezies angeben.",
 
-    "SpeciesDetails.options": "Spezies Optionen",
-    "SpeciesDetails.selectThree": "(drei wählen)",
-    "SpeciesDetails.allowCrossSpecies": "Spezis-übergreifende Talente erlauben (SL-Entscheid)",
-    "SpeciesDetails.allowEsoteric": "Esoterische Talente erlauben (SL-Entscheid)",
+    "PromotionPage.instruction": "Wählen Sie einen neuen Rang für diesen Charakter",
+
+    "SpeciesDetails.options": "Spezies-Optionen",
+    "SpeciesDetails.selectThree": "(Drei auswählen)",
+    "SpeciesDetails.allowCrossSpecies": "Spezies-übergreifende Talente erlauben (Entscheidung liegt bei der Spielleitung)",
+    "SpeciesDetails.allowEsoteric": "Esoterische Talente erlauben (Entscheidung liegt bei der Spielleitung)",
 
     "StarshipToolSelection.instruction": "Wählen Sie eine Option",
-    "StarshipToolSelection.standardBuild": "Standard Erstellung",
-    "StarshipToolSelection.standardBuildDescription": "Der Standardprozess zur Raumschiff-Erstellung folgt den Erstellungsschritten, wie in den Regelwerken beschrieben. Z.B.: Spaceframe auswählen, ein Missionsprofil usw.",
-    "StarshipToolSelection.simplifiedBuild": "Vereinfachte Erstellung",
-    "StarshipToolSelection.simplifiedBuildDescription": "Die vereinfachte Erstellung ist eine gute Option zum Übernehmen einer Reihe von Statistiken, z.B. aus einer Online-Quelle oder einer anderen Referenz.",
+    "StarshipToolSelection.standardBuildDescription": "Der Standardprozess zur Raumschiff-Erschaffung folgt den Schritten, die in den Regelwerken beschrieben sind (zum Beispiel Klasse auswählen, ein Missionsprofil usw.)",
+    "StarshipToolSelection.simplifiedBuild": "Vereinfachte Erschaffung",
+    "StarshipToolSelection.simplifiedBuildDescription": "Die vereinfachte Erschaffung ist eine gute Option zur Übernahme einer Reihe von Werten, zum Beispiel aus einer Online-Quelle oder einer anderen Referenz.",
 
     "StarshipTypeSelection.campaignYear": "Kampagnenjahr",
-    "StarshipTypeSelection.instruction": "Was ist das aktuelle Jahr in der Kampagne? Das müsste im Zweifelsfalle der/die SL wissen. Eine Voreinstellung wird abhängig von der Ära der Kampagne automatisch eingetragen.",
+    "StarshipTypeSelection.instruction": "Was ist das aktuelle Jahr in der Kampagne?\n\nDas müsste im Zweifelsfalle der/die SL wissen. Eine Voreinstellung wird abhängig von der Ära der Kampagne automatisch eingetragen.",
     "StarshipTypeSelection.year": "Jahr",
     "StarshipTypeSelection.shipPolity": "Schiffstyp",
-    "StarshipTypeSelection.whatShipPolity": "Welcher Typ Raumschiff ist es?",
+    "StarshipTypeSelection.whatShipPolity": "Um welche Art Raumschiff handelt es sich?",
     "StarshipTypeSelection.shipBuildType": "Schiffsgröße",
-    "StarshipTypeSelection.whatShipBuildType": "Welche Große hat das Schiff?",
 
-    "StarshipPage.whatScale": "Wie groß ist das Schiff?",
     "StarshipPage.whatClass": "Wie lautet der Name der Schiffsklasse?",
-    "StarshipPage.whatYear": "In welchem Jahr ist diese Schiffsklasse in Dienst gestellt worden?",
+    "StarshipPage.whatYear": "In welchem Jahr wurde diese Schiffsklasse in Dienst gestellt?",
     "StarshipPage.class": "Klasse",
 
-    "ToolSelection.instruction": "Was soll erstellt werden?",
-    "ToolSelection.mainCharacter": "Hauptcharakter",
+    "SupportingCharacter.howOld": "Wie alt ist dieser Charakter",
+    "SupportingCharacter.speciesAndAttributes": "Spezies & Attribute",
+    "SupportingCharacter.nameAndRank": "Name & Rang",
+
+    "ToolSelection.instruction": "Was soll erschaffen werden?",
+    "ToolSelection.mainCharacter": "Hauptfigur",
     "ToolSelection.supportingCharacter": "Nebencharakter",
     "ToolSelection.starship": "Raumschiff",
     "ToolSelection.spaceSector": "Raumsektor",
+    "ToolSelection.randomNpc": "Zufälliger NSC",
 
     "Common.button.select": "Auswählen",
-    "Common.button.selectAll": "Alle auswählen",
-    "Common.button.selectNone": "Nichts auswählen",
+    "Common.button.selectAll": "Alles auswählen",
+    "Common.button.selectNone": "Auswahl aufheben",
     "Common.button.exportJson": "Als JSON exportieren",
     "Common.button.exportPdf": "Als PDF exportieren",
     "Common.button.ok": "OK",
     "Common.button.add": "Hinzufügen",
     "Common.button.cancel": "Abbrechen",
+    "Common.button.create": "Erschaffen",
+    "Common.button.modify": "Anpassen",
     "Common.button.next": "Weiter",
     "Common.button.view": "Anzeigen",
 
-    "Construct.other.assignment": "Zuweisung",
     "Construct.other.attributes": "Attribute",
-    "Construct.other.characterType": "Charakter-Typ",
+    "Construct.other.career": "Karriere",
+    "Construct.other.careerEvent1": "Karriereereignis 1",
+    "Construct.other.careerEvent2": "Karriereereignis 2",
+    "Construct.other.careerEvents": "Karriereereignisse",
     "Construct.other.crew": "Crew",
     "Construct.other.departments": "Abteilungen",
     "Construct.other.determination": "Entschlossenheit",
     "Construct.other.disciplines": "Disziplinen",
     "Construct.other.environment": "Herkunft",
     "Construct.other.equipment": "Ausrüstung",
+    "Construct.other.focus": "Fokus",
+    "Construct.other.focus1": "Fokus 1",
+    "Construct.other.focus2": "Fokus 2",
+    "Construct.other.focus3": "Fokus 3",
     "Construct.other.focuses": "Fokusse",
     "Construct.other.missionProfile": "Missionsprofil",
     "Construct.other.name": "Name",
@@ -96,11 +110,11 @@
     "Construct.other.rank": "Rang",
     "Construct.other.refits": "Nachrüstungen",
     "Construct.other.resistance": "Widerstand",
-    "Construct.other.scale": "Schiffsgröeße",
+    "Construct.other.reputation": "Ansehen",
+    "Construct.other.scale": "Schiffsgröße",
     "Construct.other.serviceDate": "Indienststellung",
     "Construct.other.shields": "Schilde",
     "Construct.other.spaceFrame": "Schiffsklasse",
-    "Construct.other.specialRules": "Besondere Regeln",
     "Construct.other.species": "Spezies",
     "Construct.other.stress": "Anstrengung",
     "Construct.other.systems": "Systeme",
@@ -140,34 +154,77 @@
     "Construct.system.structure": "Hülle",
     "Construct.system.weapons": "Waffen",
 
-    "Page.title.home": "Homepage",
+    "Page.title.home": "Startseite",
     "Page.title.era": "Ära",
     "Page.title.talentsOverview": "Talente im Überblick",
     "Page.title.creditsPage": "Danksagungen",
     "Page.title.finish": "Feinschliff",
-    "Page.title.customSpeciesDetails": "Details einer eigenen Spezies",
     "Page.title.viewSheet": "Bogen anzeigen",
     "Page.title.supportingCharacter": "Nebencharakter",
-    "Page.title.characterType": "Charakter-Typ",
-    "Page.title.systemGeneration": "Sternsystem-Erstellung",
-    "Page.title.sectorDetails": "Sektor Details",
+    "Page.title.sectorDetails": "Sektordetails",
     "Page.title.starSystemDetails": "Details zum Sternensystem",
-    "Page.title.starshipToolSelection": "Werkzeug-Auswahl Raumschiff",
-    "Page.title.toolSelection": "Werkzeug-Auswahl",
-    "Page.title.gamemasterTrackerPage": "NSC-Verwaltung",
     "Page.title.customSpaceframe": "Eigene Klasse erstellen",
-    "Page.title.finalStarshipDetails": "Letzte Raumschiff-Details",
+    "Page.title.finalStarshipDetails": "Finale Raumschiff-Details",
     "Page.title.missionPodSelection": "Auswahl Missionspod",
     "Page.title.missionProfileSelection": "Auswahl Missionsprofil",
     "Page.title.missionProfileTalentSelection": "Auswahl Missionsprofil-Talent",
-    "Page.title.simpleStarship": "Vereinfachte Raumschifferstellung",
-    "Page.title.smallCraftStats": "Begleitschiff-Werte",
+    "Page.title.simpleStarship": "Vereinfachte Raumschifferschaffung",
+    "Page.title.smallCraftStats": "Shuttle-Werte",
     "Page.title.spaceframeOption": "Schiffsklassen-Optionen",
     "Page.title.spaceframeSelection": "Schiffsklasse",
-    "Page.title.starshipTalentSelection": "Raumschiff Talente",
+    "Page.title.starshipTalentSelection": "Raumschiff-Talente",
     "Page.title.starshipTypeSelection": "Raumschiff-Typ",
-    "Page.title.starshipWeaponsSelection": "Schiffswaffen",
+    "Page.title.starshipWeaponsSelection": "Raumschiffwaffen",
 
-    "Page.breadcrumb.characterCreation": "Charaktererstellung",
-    "Page.breadcrumb.starshipCreation": "Raumschifferstellung"
+    "Page.breadcrumb.characterCreation": "Charaktererschaffung",
+    "Page.breadcrumb.starshipCreation": "Raumschifferschaffung",
+
+    "Source.type.coreBook": "Grundregelwerk",
+    "Source.type.divisionBook": "Abteilungs-Bände",
+    "Source.type.quadrantBook": "Quadranten-Bände",
+    "Source.type.campaignBook": "Kampagnenbände",
+
+    "Source.book.core": "Grundregelwerk",
+    "Source.book.alphaQuadrant": "Alpha-Quadrant",
+    "Source.book.betaQuadrant": "Beta-Quadrant",
+    "Source.book.gammaQuadrant": "Gamma-Quadrant",
+    "Source.book.deltaQuadrant": "Delta-Quadrant",
+    "Source.book.commandDivision": "Kommando-Abteilung",
+    "Source.book.operationsDivision": "Operative Abteilung",
+    "Source.book.sciencesDivision": "Wissenschafts-Abteilung",
+    "Source.book.tng": "Das Nächste Jahrhundert",
+    "Source.book.ds9": "Deep Space Nine",
+    "Source.book.voyager": "Voyager",
+    "Source.book.theseAreTheVoyages": "Dies sind die Abenteuer",
+    "Source.book.klingonCore": "Klingonisches Grundregelwerk",
+    "Source.book.shackletonExpanse": "Shackleton-Ausdehnung",
+
+    "CharacterType.name.starfleet": "Sternenflotte",
+    "CharacterType.name.klingonWarrior": "Klingonische Verteidigungsstreitmacht",
+    "CharacterType.name.other": "Andere",
+
+    "GovernmentType.name.andorian": "Andorianer",
+    "GovernmentType.name.bajoran": "Bajoraner",
+    "GovernmentType.name.cardassian": "Cardassianer",
+    "GovernmentType.name.dominion": "Dominion",
+    "GovernmentType.name.federation": "Föderation",
+    "GovernmentType.name.klingon": "Klingonen",
+    "GovernmentType.name.romulan": "Romulaner",
+    "GovernmentType.name.tellarite": "Tellariten",
+    "GovernmentType.name.vulcan": "Vulkanier",
+    "GovernmentType.name.other": "Andere",
+
+    "AlliedMilitaryType.name.maco": "MACO",
+    "AlliedMilitaryType.name.klingonDefenceForce": "Klingonische Verteidigungsstreitmacht",
+    "AlliedMilitaryType.name.romulanStarEmpire": "Romulanisches Sternenimperium",
+    "AlliedMilitaryType.name.cardassianUnion": "Cardassianische Union",
+    "AlliedMilitaryType.name.dominion": "Dominion",
+    "AlliedMilitaryType.name.other": "Andere",
+
+    "ModificationType.name.reputation": "Ansehen",
+    "ModificationType.name.promotion": "Beförderung",
+    "ModificationType.name.milestone": "Meilenstein",
+
+    "MilestoneType.name.spotlightMilestone": "Rampenlicht-Meilenstein",
+    "MilestoneType.name.arcMilestone": "Handlungsbogen-Meilenstein"
 }
