add additional German translation; - convert career pages to use translation; - minor bug fixes; - additional names (Russian and Maori)

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -1,8 +1,9 @@
 {
-    "LanguageNotice.title": "Hallo!",
+    "LanguageNotice.title": "Willkommen!",
     "LanguageNotice.text": "Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, hoffen aber, bald noch weitere Sprachen unterstützen zu können.",
     "LanguageNotice.useEnglish": "Stattdessen Englisch verwenden",
 
+    "Lcars.copyright": "(PLEASE USE ENGLISH VERSION AS WELL)",
     "Lcars.credits": "Danksagungen",
     "Lcars.feedback": "Feedback",
     "Lcars.history": "Verlauf",
@@ -34,13 +35,29 @@
     "AddCharacterView.characterPrefix": "Charakter:",
 
     "CharacterSheetDialog.title": "Vorlage auswählen",
+    "CharacterSheetDialog.thumbnail": "Portraitfoto",
 
     "CustomSpeciesDetails.speciesName": "Name",
     "CustomSpeciesDetails.instruction": "Wie lautet der Name dieser Spezies?",
     "CustomSpeciesDetails.speciesTrait": "Jede Spezies erhält ein bestimmtes Merkmal, das in bestimmten Situationen zusätzliche Vorteile gewähren kann.",
     "CustomSpeciesDetails.speciesNameWarning": "Bitte einen Namen für diese Spezies angeben.",
 
+    "CharacterTypePage.whatType": "Um was für eine Art von Charakter handelt es sich?",
+    "CharacterTypePage.whatGovernment": "Welche Regierung repräsentiert dieser Charakter?",
+    "CharacterTypePage.otherGovernmentName": "Wie lautet der Name dieser Regierung?",
+    "CharacterTypePage.whatMilitary": "Welches Militär repräsentiert dieser Charakter?",
+    "CharacterTypePage.otherMilitaryName": "Wie lautet der Name dieses Militärs?",
+
+    "ModificationTypeSelectionPage.instruction": "Wählen Sie die gewünschte Änderung an Ihrem Charakter aus",
+    "ModificationTypeSelectionPage.whatMilestoneType": "Welche Art Meilenstein wird angewandt?",
+
     "PromotionPage.instruction": "Wählen Sie einen neuen Rang für diesen Charakter",
+
+    "ReputationChangePage.instruction": "Passen Sie das Ansehen des Charakters an, wenn nötig",
+
+    "MilestonePage.instruction": "Wählen Sie die gewünschte Änderung, die Sie mit diesem Meilenstein vornehmen möchten",
+
+    "ModificationCompletePage.instruction": "Der Charakter wurde geändert. Sie können sich nun den geänderten Charakter ansehen oder eine weitere Änderung vornehmen.\n\nEs ist ratsam, die URL des überarbeiteten Charakters zu speichern.",
 
     "SpeciesDetails.options": "Spezies-Optionen",
     "SpeciesDetails.selectThree": "(Drei auswählen)",
@@ -48,24 +65,34 @@
     "SpeciesDetails.allowEsoteric": "Esoterische Talente erlauben (Entscheidung liegt bei der Spielleitung)",
 
     "StarshipToolSelection.instruction": "Wählen Sie eine Option",
+    "StarshipToolSelection.standardBuild": "Standardprozess",
     "StarshipToolSelection.standardBuildDescription": "Der Standardprozess zur Raumschiff-Erschaffung folgt den Schritten, die in den Regelwerken beschrieben sind (zum Beispiel Klasse auswählen, ein Missionsprofil usw.)",
     "StarshipToolSelection.simplifiedBuild": "Vereinfachte Erschaffung",
     "StarshipToolSelection.simplifiedBuildDescription": "Die vereinfachte Erschaffung ist eine gute Option zur Übernahme einer Reihe von Werten, zum Beispiel aus einer Online-Quelle oder einer anderen Referenz.",
 
     "StarshipTypeSelection.campaignYear": "Kampagnenjahr",
-    "StarshipTypeSelection.instruction": "Was ist das aktuelle Jahr in der Kampagne?\n\nDas müsste im Zweifelsfalle der/die SL wissen. Eine Voreinstellung wird abhängig von der Ära der Kampagne automatisch eingetragen.",
+    "StarshipTypeSelection.instruction": "Was ist das aktuelle Jahr Ihrer Kampagne?\n\nFragen Sie im Zweifelsfall die Spielleitung. Eine Voreinstellung wird abhängig von der Ära der Kampagne automatisch vorgenommen.",
     "StarshipTypeSelection.year": "Jahr",
     "StarshipTypeSelection.shipPolity": "Schiffstyp",
     "StarshipTypeSelection.whatShipPolity": "Um welche Art Raumschiff handelt es sich?",
-    "StarshipTypeSelection.shipBuildType": "Schiffsgröße",
+    "StarshipTypeSelection.shipBuildType": "Art des Schiffs",
+    "StarshipTypeSelection.whatShipBuildType": "Wie groß ist das Schiff?",
 
+    "StarshipPage.whatScale": "Welche Schiffsgröße hat das Schiff?",
     "StarshipPage.whatClass": "Wie lautet der Name der Schiffsklasse?",
     "StarshipPage.whatYear": "In welchem Jahr wurde diese Schiffsklasse in Dienst gestellt?",
     "StarshipPage.class": "Klasse",
 
-    "SupportingCharacter.howOld": "Wie alt ist dieser Charakter",
+    "SupportingCharacter.whatType": "Wählen Sie die Art des Charakters.",
+    "SupportingCharacter.howOld": "Wie alt ist dieser Charakter?",
+    "SupportingCharacter.purposeOrDepartment": "Zweck oder Abteilung",
+    "SupportingCharacter.whatPurpose": "Welchen Zweck soll der Nebencharakter erfüllen? Ist er zum Beispiel ein Ingenieur, Arzt, Wissenschafter oder Sicherheitsoffizier?",
     "SupportingCharacter.speciesAndAttributes": "Spezies & Attribute",
+    "SupportingCharacter.speciesAndAttributesInstruction": "Weisen Sie die Attributswerte zu und wählen Sie die Spezies des Charakters. Die gewählte Spezies wirkt sich am Ende auf die Attributswerte aus. Um zwei Werte zu vertauschen, wählen Sie beide aus.",
+    "SupportingCharacter.disciplineInstruction": "Weisen Sie die Diziplin-Werte zu. Der höchste Wert sollte der Abteilung bzw. dem Zweck des Charakters entsprechen. Um zwei Werte zu vertauschen, wählen Sie beide aus.",
+    "SupportingCharacter.focusInstruction": "Wählen Sie drei Fokusse für den Charakter. Zumindest einer davon sollte die Abteilung bzw. den Zweck des Charakters widerspiegeln.",
     "SupportingCharacter.nameAndRank": "Name & Rang",
+    "SupportingCharacter.nameAndRankInstruction": "Geben Sie dem Charakter einen passenden Namen und Rang. Nebencharaktere sollten keinen höheren Rang als Lieutenant haben und sind oftmals sogar Mannschaftsdienstgrade anstatt von Offizieren.",
 
     "ToolSelection.instruction": "Was soll erschaffen werden?",
     "ToolSelection.mainCharacter": "Hauptfigur",
@@ -87,11 +114,17 @@
     "Common.button.next": "Weiter",
     "Common.button.view": "Anzeigen",
 
+    "Common.text.none": "Keine Auswahl",
+
+    "Common.select.choose": "Wählen Sie aus ...",
+
+    "Construct.other.assignment": "Position",
     "Construct.other.attributes": "Attribute",
     "Construct.other.career": "Karriere",
     "Construct.other.careerEvent1": "Karriereereignis 1",
     "Construct.other.careerEvent2": "Karriereereignis 2",
     "Construct.other.careerEvents": "Karriereereignisse",
+    "Construct.other.characterType": "Art des Charakters",
     "Construct.other.crew": "Crew",
     "Construct.other.departments": "Abteilungen",
     "Construct.other.determination": "Entschlossenheit",
@@ -103,22 +136,27 @@
     "Construct.other.focus2": "Fokus 2",
     "Construct.other.focus3": "Fokus 3",
     "Construct.other.focuses": "Fokusse",
+    "Construct.other.job": "Tätigkeit",
     "Construct.other.missionProfile": "Missionsprofil",
     "Construct.other.name": "Name",
     "Construct.other.pronouns": "Pronomen",
     "Construct.other.power": "Energie",
+    "Construct.other.purpose": "Zweck",
     "Construct.other.rank": "Rang",
     "Construct.other.refits": "Nachrüstungen",
     "Construct.other.resistance": "Widerstand",
+    "Construct.other.reprimands": "Verwarnungen",
     "Construct.other.reputation": "Ansehen",
     "Construct.other.scale": "Schiffsgröße",
     "Construct.other.serviceDate": "Indienststellung",
     "Construct.other.shields": "Schilde",
     "Construct.other.spaceFrame": "Schiffsklasse",
+    "Construct.other.specialRules": "Spezialregeln",
     "Construct.other.species": "Spezies",
     "Construct.other.stress": "Anstrengung",
     "Construct.other.systems": "Systeme",
     "Construct.other.talents": "Talente",
+    "Construct.other.training": "Ausbildung",
     "Construct.other.trait": "Merkmal",
     "Construct.other.traits": "Merkmale",
     "Construct.other.upbringing": "Erziehung",
@@ -159,10 +197,16 @@
     "Page.title.talentsOverview": "Talente im Überblick",
     "Page.title.creditsPage": "Danksagungen",
     "Page.title.finish": "Feinschliff",
+    "Page.title.customSpeciesDetails": "Details zur selbst erschaffenen Spezies",
     "Page.title.viewSheet": "Bogen anzeigen",
     "Page.title.supportingCharacter": "Nebencharakter",
+    "Page.title.characterType": "Art des Charakters",
+    "Page.title.systemGeneration": "System-Erschaffung",
     "Page.title.sectorDetails": "Sektordetails",
     "Page.title.starSystemDetails": "Details zum Sternensystem",
+    "Page.title.starshipToolSelection": "Auswahl der Raumschiff-Erschaffung",
+    "Page.title.toolSelection": "Werkzeug-Auswahl",
+    "Page.title.gamemasterTrackerPage": "NSC-Verwaltung",
     "Page.title.customSpaceframe": "Eigene Klasse erstellen",
     "Page.title.finalStarshipDetails": "Finale Raumschiff-Details",
     "Page.title.missionPodSelection": "Auswahl Missionspod",
@@ -175,14 +219,24 @@
     "Page.title.starshipTalentSelection": "Raumschiff-Talente",
     "Page.title.starshipTypeSelection": "Raumschiff-Typ",
     "Page.title.starshipWeaponsSelection": "Raumschiffwaffen",
+    "Page.title.modificationTypeSelection": "Art der Änderung",
+    "Page.title.reputationChange": "Änderung des Ansehens",
+    "Page.title.promotion": "Beförderung",
+    "Page.title.normalMilestone": "Regulärer Meilenstein",
+    "Page.title.modificationComplete": "Änderung abgeschlossen",
+    "Page.title.npcConfiguration": "Anpassung zufälliger NSCs",
 
     "Page.breadcrumb.characterCreation": "Charaktererschaffung",
     "Page.breadcrumb.starshipCreation": "Raumschifferschaffung",
+    "Page.breadcrumb.supportingCharacterCreation": "Erschaffung von Nebencharakteren",
 
     "Source.type.coreBook": "Grundregelwerk",
     "Source.type.divisionBook": "Abteilungs-Bände",
     "Source.type.quadrantBook": "Quadranten-Bände",
+    "Source.type.crewBook": "Spielercharakter-Spielhilfen",
     "Source.type.campaignBook": "Kampagnenbände",
+    "Source.type.expansion": "Wichtige Erweiterungsbände",
+    "Source.type.misc": "Sonstige Bände",
 
     "Source.book.core": "Grundregelwerk",
     "Source.book.alphaQuadrant": "Alpha-Quadrant",
@@ -199,8 +253,17 @@
     "Source.book.klingonCore": "Klingonisches Grundregelwerk",
     "Source.book.shackletonExpanse": "Shackleton-Ausdehnung",
 
+    "Era.name.enterprise": "Enterprise (22. Jahrhundert)",
+    "Era.name.originalSeries": "Originalserie (23. Jahrhundert)",
+    "Era.name.nextGeneration": "Das Nächste Jahrhundert (24. Jahrhundert)",
+
     "CharacterType.name.starfleet": "Sternenflotte",
     "CharacterType.name.klingonWarrior": "Klingonische Verteidigungsstreitmacht",
+    "CharacterType.name.civilian": "Zivilisten",
+    "CharacterType.name.alliedMilitary": "Alliiertes Militär",
+    "CharacterType.name.ambassadorDiplomat": "Botschafter / Diplomaten",
+    "CharacterType.name.cadet": "Kadetten",
+    "CharacterType.name.child": "Kinder",
     "CharacterType.name.other": "Andere",
 
     "GovernmentType.name.andorian": "Andorianer",
@@ -215,8 +278,11 @@
     "GovernmentType.name.other": "Andere",
 
     "AlliedMilitaryType.name.maco": "MACO",
+    "AlliedMilitaryType.name.andorianImperialGuard": "Andorianische Imperial Garde",
+    "AlliedMilitaryType.name.vulcanHighCommand": "Vulkanisches Oberkommando",
     "AlliedMilitaryType.name.klingonDefenceForce": "Klingonische Verteidigungsstreitmacht",
     "AlliedMilitaryType.name.romulanStarEmpire": "Romulanisches Sternenimperium",
+    "AlliedMilitaryType.name.bajoranMilitia": "Bajoranisches Militär",
     "AlliedMilitaryType.name.cardassianUnion": "Cardassianische Union",
     "AlliedMilitaryType.name.dominion": "Dominion",
     "AlliedMilitaryType.name.other": "Andere",
@@ -225,6 +291,29 @@
     "ModificationType.name.promotion": "Beförderung",
     "ModificationType.name.milestone": "Meilenstein",
 
+    "MilestoneType.name.normalMilestone": "Regulärer Meilenstein",
     "MilestoneType.name.spotlightMilestone": "Rampenlicht-Meilenstein",
-    "MilestoneType.name.arcMilestone": "Handlungsbogen-Meilenstein"
+    "MilestoneType.name.arcMilestone": "Handlungsbogen-Meilenstein",
+
+    "World.attribute.designation": "Bezeichnung",
+    "World.attribute.classification": "Klasse",
+    "World.attribute.notes": "Anmerkungen",
+    "World.attribute.orbitalRadius": "Orbitaler Radius",
+    "World.attribute.orbitalPeriod": "Umlaufdauer",
+    "World.attribute.eccentricity": "Exzentrik",
+    "World.attribute.diameter": "Durchmesser",
+    "World.attribute.density": "Dichter",
+    "World.attribute.mass": "Masse",
+    "World.attribute.gravity": "Schwerkraft",
+    "World.attribute.satellites": "Satelliten",
+    "World.attribute.core": "Kern",
+    "World.attribute.features": "Eigenarten",
+    "World.attribute.rotation": "Umdrehung",
+    "World.attribute.tidallyLocked": "Rotiert gebunden",
+    "World.attribute.retrograde": "Planetenschleife",
+    "World.attribute.axialTilt": "Achsenneigung",
+    "World.attribute.waterCoverage": "Oberflächenwasser",
+    "World.attribute.ring": "Ring",
+    "World.attribute.beltWidth": "Durchmesser des Gürtels",
+    "World.attribute.predominantSize": "Typische Größe"
 }
