- add a few more spaceframe outlines; convert environments to be translate-ready; minor translation tweaks on a few other pages; - use the webpack loader for fetching translations, rather than a basic HTTP loader

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -3,7 +3,7 @@
     "LanguageNotice.text": "Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, hoffen aber, bald noch weitere Sprachen unterstützen zu können.",
     "LanguageNotice.useEnglish": "Stattdessen Englisch verwenden",
 
-    "Lcars.copyright": "(PLEASE USE ENGLISH VERSION AS WELL)",
+    "Lcars.copyright": "STAR TREK and related marks and logos are trademarks of CBS Studios Inc. All Rights Reserved.",
     "Lcars.credits": "Danksagungen",
     "Lcars.feedback": "Feedback",
     "Lcars.history": "Verlauf",
