--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -54,6 +54,29 @@
     "CharacterTypePage.whatMilitary": "What military does this character represent?",
     "CharacterTypePage.otherMilitaryName": "What's the name of this military?",
 
+    "EnvironmentPage.showAlt": "Allow alternate Environments (GM's decision)",
+
+    "EnvironmentPage.button.selectEnvironment": "Select Environment",
+    "EnvironmentPage.button.rollEnvironment": "Roll Environment",
+    "EnvironmentPage.button.selectAltEnvironment": "Select Alternate Environment",
+    "EnvironmentPage.button.rollAltEnvironment": "Roll Alternate Environment",
+
+    "EnvironmentPage.simple.instruction": "Either select or roll your Environment.",
+
+    "EnvironmentPage.starfleet.instruction": "Regardless of their species, Starfleet officers come from many places, across many worlds. While many Humans (for example) are born on Earth, there are many more who were born on a colonized world elsewhere in the Galaxy, or on a starbase or a starship.",
+
+    "EnvironmentPage.klingon.instruction": "The Klingon Empire is vast and expands with each new conquest. Thus, Klingons come from many different worlds, from the likes of Qo’noS and Khitomer in the heart of the Empire, to border colonies that may have only been claimed in the last generation. Further, as a culture which has been spacefaring for centuries, countless Klingons are raised in space, aboard starbases and transport ships across the Empire.",
+
+    "EnvironmentPage.civilian.instruction": "Regardless of their species, people come from many places, across many worlds. While many Humans (for example) are born on Earth, there are many more who were born on a colonized world elsewhere in the Galaxy, or on a starbase or a starship.",
+
+    "EnvironmentPage.ambassador.instruction": "Regardless of their species, diplomats come from many places, across many worlds. While many Humans (for example) are born on Earth, there are many more who were born on a colonized world elsewhere in the Galaxy, or on a starbase or a starship.",
+
+    "EnvironmentPage.cadet.instruction": "Regardless of their species, Starfleet cadets come from many places, across many worlds. While many Humans (for example) are born on Earth, there are many more who were born on a colonized world elsewhere in the Galaxy, or on a starbase or a starship.",
+
+    "EnvironmentPage.child.instruction": "Regardless of their species, children come from many places, across many worlds. While many Humans (for example) are born on Earth, there are many more who were born on a colonized world elsewhere in the Galaxy, or on a starbase or a starship.",
+
+    "EnvironmentPage.alliedMilitary.instruction": "Regardless of their species, military officers and ratings come from many places, across many types of worlds.",
+
     "ModificationTypeSelectionPage.instruction": "Please select the modification that you want to apply to this character:",
     "ModificationTypeSelectionPage.whatMilestoneType": "What kind of milestone is being applied?",
 
@@ -99,6 +122,8 @@
     "SupportingCharacter.focusInstruction": "Choose three Focuses for the character. At least one should reflect the department/purpose of the character.",
     "SupportingCharacter.nameAndRank": "Name & Rank",
     "SupportingCharacter.nameAndRankInstruction": "Give the character an appropriate name and rank. Supporting Characters should never have a rank above Lieutenant and may often be enlisted personnel rather than officers.",
+    "SupportingCharacter.numericalValue": "Value",
+    "SupportingCharacter.speciesBonus": "Species Bonus",
 
     "ToolSelection.instruction": "What do you want to create?",
     "ToolSelection.mainCharacter": "Main Character",
@@ -121,10 +146,13 @@
     "Common.button.view": "View",
 
     "Common.text.none": "None",
+    "Common.text.select": "Select",
+    "Common.text.total": "Total",
 
     "Common.select.choose": "Choose...",
 
     "Construct.other.assignment": "Assignment",
+    "Construct.other.attribute": "Attribute",
     "Construct.other.attributes": "Attributes",
     "Construct.other.career": "Career",
     "Construct.other.careerEvent1": "Career Event 1",
@@ -134,6 +162,7 @@
     "Construct.other.crew": "Crew",
     "Construct.other.departments": "Departments",
     "Construct.other.determination": "Determination",
+    "Construct.other.discipline": "Discipline",
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environment",
     "Construct.other.equipment": "Equipment",
@@ -204,6 +233,8 @@
     "Page.title.talentsOverview": "Talents Overview",
     "Page.title.career": "Career",
     "Page.title.creditsPage": "Credits",
+    "Page.title.environment": "Environment",
+    "Page.title.environmentDetails": "Environment Details",
     "Page.title.finish": "Finishing Touches",
     "Page.title.customSpeciesDetails": "Custom Species Details",
     "Page.title.viewSheet": "View Sheet",
@@ -318,6 +349,62 @@
     "CareerType.klingon.veteran.description": "The character has decades of experience in the service of the Empire, and has served on many ships and space stations. The character’s judgement and opinions are highly regarded by subordinates, peers, and even superiors.",
     "CareerType.klingon.veteran.valueInstruction": "The character receives a Value, which must reflect the character’s years of experience and the beliefs they’ve formed over their long career.",
 
+    "Environment.common.homeworld.name": "Homeworld",
+    "Environment.common.homeworld.description": "The character comes from the world that birthed their civilization, and has been surrounded by cultural and spiritual legacies their entire life. Species homeworlds are often utopian and idyllic, serving as the platonic ideal of that species’ culture. They also exemplify aspects of a culture’s most revered traditions, and serve as the heart of that civilization’s legal and political landscape.",
+
+    "Environment.common.busyColony.name": "Busy Colony",
+    "Environment.common.busyColony.description": "The character comes from one of their culture’s oldest or most prosperous colonies, which may be another world within their home system — such as Luna or Mars for Humans — or one of the first worlds colonized after the culture achieved interstellar flight. These colonies often develop a fiercely independent outlook, often having developed with little direct aid from their homeworld, and a sense of pride that accompanies being amongst the first of their kind to tame another world.",
+
+    "Environment.common.isolatedColony.name": "Isolated Colony",
+    "Environment.common.isolatedColony.description": "The character comes from a colony that is isolated from broader galactic society. Worlds like the Vulcan monastery on P’Jem use the vast distances between star systems as an opportunity for contemplative isolation, while others are settled because they present unique research opportunities. The cultures of these colonies tend to focus on learning and introspection.",
+
+    "Environment.common.frontierColony.name": "Frontier Colony",
+    "Environment.common.frontierColony.description": "The character comes from a colony located on the fringes of known space, either on the edge of uncharted space or on the border with another civilization. Frontier colonists tend to be hardy and determined, even stubborn, and well-prepared for the dangers that their home may pose.",
+
+    "Environment.common.starshipOrStarbase.name": "Starship or Starbase",
+    "Environment.common.starshipOrStarbase.description": "The character grew up in space, travelling aboard a starship or living aboard a space station or starbase. While they’re unlikely to have lived aboard a Starfleet vessel — only some of them carry families — many freighters, transports, and other civilian vessels have a tradition of family or generational crews, and many officers with families take postings to starbases rather than ships. Those raised in space learn the ins-and-outs of shipboard life as children, and many are groomed for leadership, or learn to fly a shuttle in their formative years.",
+
+    "Environment.common.anotherSpeciesWorld.name": "Another Species' World",
+    "Environment.common.anotherSpeciesWorld.description": "The character grew up amongst another species. They might have lived amongst a small enclave of their own kind, or they may have been orphaned by some manner of disaster and raised by aliens. Whatever the situation, the character has unique perspectives on their own species and on those they were raised alongside.",
+
+    "Environment.klingon.homeworld.name": "Qo'noS",
+    "Environment.klingon.homeworld.description": "You hail from the Klingon homeworld of Qo’noS, often called Kronos by outsiders, and you’ve been surrounded by the cultural and spiritual legacies of Kahless and the Empire for your entire life. The oldest and most revered of Klingon traditions came from your homeworld, and they are a defining part of your upbringing.",
+
+    "Environment.klingon.busyColony.name": "Busy Colony",
+    "Environment.klingon.busyColony.description": "You come from one of the Empire’s oldest or most prosperous colonies. These colonies often have a fiercely independent outlook, having developed with little aid from the Empire in their earliest days, and the pride that accompanies being amongst the first of their kind to tame an alien world still remains in the descendants of those first settlers.",
+
+    "Environment.klingon.isolatedColony.name": "Isolated Colony",
+    "Environment.klingon.isolatedColony.description": "You come from a colony isolated from the rest of the Empire, and from the wider Galaxy. Worlds like Boreth use this isolation as an opportunity for spirituality and contemplation, while others are settled because they present unique opportunities to perform research far from the scrutiny and politicking of the core worlds. Even in the Empire, these worlds emphasize learning and introspection.",
+
+    "Environment.klingon.frontierColony.name": "Frontier Colony",
+    "Environment.klingon.frontierColony.description": "You come from a colony located on the fringes of the Empire, either on the edge of explored space or on the border with the Federation or the Romulan Empire. Your world may even have been claimed from one of those rival powers during a conflict in previous generations. Frontier colonies tend to produce determined people, stubborn and well-prepared for the dangers their home may present, and entirely willing to fight to keep what they have settled.",
+
+    "Environment.klingon.starshipOrStarbase.name": "Starship or Starbase",
+    "Environment.klingon.starshipOrStarbase.description": "You grew up in space, travelling aboard a starship or living aboard a space station. You won’t have been raised aboard a warship, but many freighters, transports, and other civilian vessels have a tradition of family or generational crews. Those raised in space learn the ways of shipboard life as children, and many take to a spacefaring life easily as a result.",
+
+    "Environment.klingon.anotherSpeciesWorld.name": "Another Species' World",
+    "Environment.klingon.anotherSpeciesWorld.description": "You grew up amongst non-Klingons. Perhaps you were part of a Klingon enclave overseeing a conquered world, or you were raised amongst exiles, or orphaned during a battle or disaster and raised by aliens. You might have been raised in the Empire, or you may be an outsider to it. Whatever the situation, you have chosen to serve the Empire and prove that you are as Klingon as anyone born on Qo’noS, even if you may have different perspectives on Klingon culture and tradition.",
+
+    "Environment.alternate.utopianParadise.name": "Utopian Paradise",
+    "Environment.alternate.utopianParadise.description": "You were raised in an environment of peace, prosperity, and abundance. There was no war on your world, nor any poverty, homelessness, hunger, or crime. You knew of those things only from studies of history and you have never really been able to understand how a society could produce such destructive inequality. You have always had access to the resources to not merely survive, but to thrive in whatever endeavors you chose to pursue.",
+
+    "Environment.alternate.cosmopolitan.name": "Cosmopolitan",
+    "Environment.alternate.cosmopolitan.description": "You were raised in environments of trade or diplomacy, and the intermingling of different communities and cultures. The unfamiliar has always been familiar to you, and you had become familiar with dozens of cultures from distant worlds long before you were an adult. The frenetic pace of life and the basic need to revel in differences between groups and individuals have stayed with you as simple facts of existence in this big Galaxy.",
+
+    "Environment.alternate.rigorousDiscipline.name": "Rigorous Discipline",
+    "Environment.alternate.rigorousDiscipline.description": "You have always been surrounded by notions of duty and purpose, and your childhood was a strict one, aimed at preparing you to take on a specific role or to achieve a specific goal. This meant relatively little personal freedom, but it instilled within you a powerful sense of what you were capable of when pushed to succeed.",
+
+    "Environment.alternate.ascetismAndIntrospection.name": "Ascetism and Introspection",
+    "Environment.alternate.ascetismAndIntrospection.description": "Your life was a simple one, lacking in many of the luxuries that prosperous worlds take for granted. This was not because of a lack, but rather a choice – a belief amongst those you grew up with that external and material abundance can distract from self-knowledge and personal growth.",
+
+    "Environment.alternate.struggleAndHardship.name": "Struggle and Hardship",
+    "Environment.alternate.struggleAndHardship.description": "For one reason or another, your world was one with few available resources. Worlds on the frontier, as well as isolated outposts, are often places of hardship where continued survival is difficult, while other worlds struggle in the wake of natural or ecological disasters, the aftermath of war, or societal collapse that leaves basic infrastructure in ruins. Some seek out worlds such as this, where “honest toil” is held as a virtue, while others find themselves in lives of daily struggle through no choice of their own and seek to either better their world or escape it.",
+
+    "Environment.alternate.occupationOrWar.name": "Occupation or War",
+    "Environment.alternate.occupationOrWar.description": "Though the Federation’s members no longer war amongst themselves, warfare is still a part of the Galaxy. Local or planetary conflicts afflict many independent worlds, and interstellar conflicts ranging from border skirmishes to sector-spanning wars are something which all civilizations must prepare to face. Worlds ravaged by war, or even occupied by a hostile nation, are difficult places to live, often forcing people to adapt to horrific conditions and life-or-death decisions.",
+
+    "Environment.special.name": "{{name}} ({{species}})",
+
     "GovernmentType.name.andorian": "Andorian",
     "GovernmentType.name.bajoran": "Bajoran",
     "GovernmentType.name.cardassian": "Cardassian",
@@ -347,9 +434,6 @@
     "MilestoneType.name.spotlightMilestone": "Spotlight Milestone",
     "MilestoneType.name.arcMilestone": "Arc Milestone",
 
-    "World.class.description": "Class {{class}}",
-    "World.class.fullDescription": "Class {{class}} ({{definition}})",
-
     "World.attribute.designation": "Designation",
     "World.attribute.classification": "Classification",
     "World.attribute.notes": "Notes",
@@ -370,5 +454,8 @@
     "World.attribute.waterCoverage": "Water Coverage",
     "World.attribute.ring": "Ring",
     "World.attribute.beltWidth": "Belt Width",
-    "World.attribute.predominantSize": "Predominant Size"
+    "World.attribute.predominantSize": "Predominant Size",
+
+    "World.class.description": "Class {{class}}",
+    "World.class.fullDescription": "Class {{class}} ({{definition}})"
 }
